--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -17,9 +17,9 @@
 	<key>BUNDLE_ID</key>
 	<string>com.rafouniq.chatapp</string>
 	<key>PROJECT_ID</key>
-	<string>chatapp-kuldii</string>
+	<string>chatapp-acer</string>
 	<key>STORAGE_BUCKET</key>
-	<string>chatapp-kuldii.appspot.com</string>
+	<string>chatapp-acer.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
